# fts-simulation

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  LidarSensor.cpp  LidarSensor.h  Makefile  ObstacleManager.cpp  ObstacleManager.h  README.md  Robot.cpp  Robot.h  RobotController.cpp  RobotController.h  main.cpp  map.cpp  map.h  navigation.cpp  navigation.h
.github/workflows/: ci.yml
assets/maps/: warehouse_map.json
docs/: headless-rendering-split.md
include/: chargingmanager.h  emergencystopcontroller.h  routefollower.h
include/control/: PIController.h
include/rendering/: RaylibGeometry.h  RobotRenderer.h  SimulationRenderer.h
include/robots/: Battery.h  IRobotRenderer.h  ObstacleRobot.h  Robot.h  RobotRenderData.h  RobotState.h  WorkerRobot.h
include/sensors/: LidarSensor.h  ProximitySensor.h  Sensor.h
include/simulation/: BlockingRobotController.h  BlockingRobotManager.h  ChargingManager.h  EmergencyStopController.h  Geometry.h  ILogisticsMap.h  InputState.h  MapData.h  MathUtils.h  NavigationGraph.h  ObstacleManager.h  RobotController.h  RobotRoutePlanner.h  RobotStatusSnapshot.h  RobotTaskFlow.h  RouteFollower.h  SimConfig.h  SimConstants.h  map.h  navigation.h
include/ui/: MapOverlay.h  StatusOverlay.h
src/: chargingmanager.cpp  emergencystopcontroller.cpp  main.cpp  routefollower.cpp
src/control/: PIController.cpp
src/rendering/: BlockingRobotRenderer.cpp  LogisticsMapRenderer.cpp  RobotControllerRenderer.cpp  RobotRenderer.cpp  RouteFollowerRenderer.cpp
src/robots/: Battery.cpp  ObstacleRobot.cpp  Robot.cpp  WorkerRobot.cpp
src/sensors/: LidarSensor.cpp  ProximitySensor.cpp
src/simulation/: BlockingRobotController.cpp  BlockingRobotManager.cpp  ChargingManager.cpp  EmergencyStopController.cpp  InputState.cpp  MapData.cpp  NavigationGraph.cpp  ObstacleManager.cpp  RobotController.cpp  RobotRoutePlanner.cpp  RobotTaskFlow.cpp  RouteFollower.cpp  map.cpp  navigation.cpp
src/ui/: MapOverlay.cpp  StatusOverlay.cpp
tests/: unit_tests.cpp
tests/robots/: pi_controller_tests.cpp  robot_tests.cpp
tests/sensors/: lidar_tests.cpp  proximity_sensor_tests.cpp
tests/simulation/: blocking_robot_manager_tests.cpp  charging_manager_tests.cpp  emergency_stop_controller_tests.cpp  map_tests.cpp  navigation_tests.cpp  obstacle_tests.cpp  robot_controller_tests.cpp  robot_route_planner_tests.cpp  robot_task_flow_tests.cpp
tests/support/: MockLogisticsMap.h  test_helpers.h  test_runner.h  test_suites.h
tools/: run-clang-tidy.sh
